# infproj

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
include/: builder.hpp  button.hpp  context.hpp  evaluate.hpp  exprtk.hpp  node.hpp  register.hpp  resource.hpp  scene.hpp
res/: CMakeLists.txt
res/xml/: demo_button.xml  demo_main_menu.xml  demo_maze_level.xml  demo_registers.xml  demo_settings_menu.xml  main_menu.xml  rock_paper_scissors.xml  root_main_menu.xml  selection_menu.xml  settings_menu.xml
src/: CMakeLists.txt  builder.cpp  button.cpp  button_builder.cpp  cfusion.cpp  cfusion.hpp  context.cpp  decrypt.cpp  decrypt.hpp  evaluate.cpp  gomoku.cpp  gomoku.hpp  main.cpp  node.cpp  node_builder.cpp  register_builder.cpp  rps.cpp  rps.hpp  scene.cpp  ttt.cpp  ttt.hpp
src/demo/: CMakeLists.txt  demo_builder.cpp  demo_button.cpp  demo_context.cpp  demo_registers.cpp
